--- a/src/components/Content/Main/project.scss
+++ b/src/components/Content/Main/project.scss
@@ -18,7 +18,7 @@
 				transform: translateY(-130px);
 			}
 			.images {
-				opacity:1;
+				opacity: 1;
 			}
 			&.right {
 				.headers h1,
@@ -26,17 +26,17 @@
 					transform: translateY(-130px);
 				}
 				.images {
-					opacity:1;
+					opacity: 1;
 				}
 			}
 		}
 		&.before {
 			.images {
-				opacity:0;
+				opacity: 0;
 			}
 			&.right {
 				.images {
-					opacity:0;
+					opacity: 0;
 				}
 			}
 		}
@@ -166,6 +166,7 @@
 		}
 
 		.images {
+			display: none;
 			width: 100%;
 			height: 100%;
 			position: absolute;
@@ -191,6 +192,16 @@
 			&#img2 {
 				z-index: 3;
 			}
+		}
+
+		canvas {
+			position: fixed;
+			height: auto;
+			width: 100vw;
+			left: 0;
+			top: 50%;
+			transform: translateY(-50%);
+			z-index: 1;
 		}
 	}
 }
