--- a/src/components/Header/menu.scss
+++ b/src/components/Header/menu.scss
@@ -225,7 +225,7 @@
 					a {
 						line-height: 100%;
 						transition: $Transition;
-						color: #d5dade;
+						color: #dee2e6;
 						margin: auto;
 						&:hover {
 							color: #131517;
