--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -12,8 +12,8 @@
 }
 
 main {
-	height: 100%;
-	min-height: 100vh;
+	// height: 100%;
+	// min-height: 100vh;
 	.content {
 		color: #FFF;
 		margin: 40vh 0
