--- a/src/components/Header/menu.scss
+++ b/src/components/Header/menu.scss
@@ -39,7 +39,7 @@
 		margin-left: auto;
 		z-index: 10;
 		min-height: 35px;
-		min-width: 35px;
+		height: 24px;
 		position: relative;
 		overflow: hidden;
 		span {
