--- a/src/components/Content/Works/works.scss
+++ b/src/components/Content/Works/works.scss
@@ -103,9 +103,11 @@
 		padding: $logoH*3+px 0 0;
 		color: $specialBlack;
 		height: 100%;
+
 		.works_images {
 			margin: $framePaddingXx 0 0;
 			line-height: 0;
+			background-color: #FFF;
 			img {
 				min-width: 100vw;
 				max-width: 100%;
@@ -122,7 +124,7 @@
 
 			transition: $Transition;
 			.works_services_list {
-				margin: $framePaddingXx*2 0 $framePaddingXx*2;
+				margin: $framePaddingXx*2 0 $framePaddingXx*4;
 				padding: 0;
 				list-style: none;
 				li {
@@ -130,7 +132,7 @@
 				}
 			}
 			.works_list {
-				margin: $framePaddingXx*4 0;
+				margin: $framePaddingXx*4 auto;
 			}
 		}
 	}
