footer work_list appear fix

--- a/src/components/Content/Works/works.scss
+++ b/src/components/Content/Works/works.scss
@@ -132,7 +132,8 @@
 				}
 			}
 			.works_list {
-				margin: $framePaddingXx*4 auto;
+				padding-top: $framePaddingXx*2;
+				padding-bottom: $framePaddingXx*2;
 			}
 		}
 	}
