--- a/src/components/Content/Main/project.scss
+++ b/src/components/Content/Main/project.scss
@@ -185,6 +185,7 @@
 				min-height: 120vh;
 				background-position: center;
 				background-repeat: no-repeat;
+				// transition: .4s cubic-bezier(0.1, 0.1, 0.3, 1.1);
 			}
 			img {
 				width: 100%;
