--- a/src/components/Content/About/about.scss
+++ b/src/components/Content/About/about.scss
@@ -62,4 +62,11 @@
 		color: $linkColor;
 		transition: $Transition;
 	}
+
+	.mail {
+		transition: .6s ease;
+		&:hover {
+			opacity: .7;
+		}
+	}
 }
