--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
 	background-color: $specialBlack;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
-	line-height: 40px;
+	line-height: 34px;
 	font-size: 20px;
 }
 
@@ -78,7 +78,8 @@ h3 {
 }
 
 h4,
-.works_services li {
+.works_services li,
+.content_p {
 	line-height: 60px;
 	margin: 0 0 0 -0.085em;
 	@include adaptive(xx) {
