--- a/src/components/Content/Main/project.scss
+++ b/src/components/Content/Main/project.scss
@@ -76,7 +76,6 @@
 			flex-direction: column;
 			z-index: 10;
 			transition: $Transition;
-
 			.hidden {
 				overflow: hidden;
 				padding: 15px 0;
@@ -92,6 +91,11 @@
 
 				@include adaptive(x05) {
 					margin-top: -15px;
+				}
+			}
+			@include adaptive(x025) {
+				.hidden {
+					margin-top: -12px;
 				}
 			}
 		}
@@ -198,7 +202,6 @@
 					height: 100%;
 					width: 100%;
 					@include adaptive(x025) {
-						
 					}
 					@include adaptive(x01) {
 						background-size: auto 120vh;
@@ -208,6 +211,26 @@
 			&#img1 {
 				z-index: 2;
 			}
+		}
+	}
+
+	.project {
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: 10;
+		opacity: 0;
+		visibility: hidden;
+		transition: $Transition;
+		transition-duration: 1s;
+
+		&.active {
+			visibility: visible;
+			z-index: 11;
+			opacity: 1;
+
 		}
 	}
 }
