--- a/src/components/Header/menu.scss
+++ b/src/components/Header/menu.scss
@@ -58,15 +58,14 @@
 		}
 		&.opened {
 			span {
+				margin-left: -3px;
 				background-color: #d5dade !important;
-
-
 				&:nth-of-type(1) {
 					transform: rotate(-45deg);
 				}
 				&:nth-of-type(2) {
 					transform: rotate(45deg);
-					margin-top: 23.5px;
+					margin-top: 24px;
 				}
 			}
 		}
