--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -47,7 +47,7 @@
 		z-index: 22;
 		left: 50%;
 		top: 50%;
-		transform: translate3D(-50%, -50%,0);
+		transform: translate3D(-50%, -50%, 0);
 		svg {
 			width: 30vw;
 		}
@@ -105,13 +105,15 @@
 
 			.hidden {
 				overflow: hidden;
-				padding: 15px 0;
+				margin: 15px 0;
 			}
 			h1 {
 				transition: $Transition;
 				margin: 0;
+				line-height: 100%;
 			}
 			h5 {
+				line-height: 100%;
 				font-weight: 500;
 				transition: $Transition;
 				@include adaptive(x05) {
@@ -148,12 +150,11 @@
 				overflow: hidden;
 				> div {
 					transition: .1s ease;
-
 				}
 			}
 			&.out {
 				li > div {
-					transform: translateY(-60%);
+					transform: translateY(-70%);
 				}
 			}
 
@@ -215,7 +216,7 @@
 		&.out {
 			.headers h1,
 			.headers h5 {
-				transform: translateY(-130px);
+				transform: translateY(-150px);
 			}
 			.images {
 				opacity: 1;
@@ -223,7 +224,7 @@
 			&.right {
 				.headers h1,
 				.headers h5 {
-					transform: translateY(-130px);
+					transform: translateY(-150px);
 				}
 				.images {
 					opacity: 1;
@@ -248,6 +249,67 @@
 			}
 			.images {
 				transform: translateX(0);
+			}
+		}
+
+		.images {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			// transition: .4s cubic-bezier(0.1, 0.1, 0.3, 1.1);
+			// left: 50%;
+			// transform: translate3D(-50%, -50%, 0);
+			// top: 50%;
+			.imgCover {
+				background-size: cover;
+				min-width: 120vw;
+				min-height: 120vh;
+				background-position: center;
+				background-repeat: no-repeat;
+				transition: .4s cubic-bezier(0.1, 0.1, 0.3, 1.1);
+			}
+			img {
+				width: 100%;
+				height: auto;
+			}
+			&#img1 {
+				z-index: 1;
+				.imgCover {
+					max-height: 80vh;
+					height: 100%;
+					width: 100%;
+					@include adaptive(x025) {
+					}
+					@include adaptive(x01) {
+						background-size: auto 120vh;
+					}
+				}
+			}
+			&#img1 {
+				z-index: 2;
+			}
+		}
+		.project {
+			position: fixed;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			z-index: 10;
+			opacity: 0;
+			visibility: hidden;
+			transition: $Transition;
+			transition-duration: 1s;
+
+			&.active {
+				visibility: visible;
+				z-index: 11;
+				opacity: 1;
 			}
 		}
 	}
