--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -11,34 +11,6 @@
 	}
 }
 
-@keyframes b_mask {
-	0% {
-		transform: scale(1) translate3d(0%, 0%, 0);
-		opacity: 0;
-	}
-	100% {
-		opacity: 0;
-		transform: scale(40) translate3d(0%, 0%, 0);
-	}
-}
-.overlay {
-	position: absolute;
-	z-index: 10;
-	.logo {
-		animation: b_mask 2s infinite;
-		animation-fill-mode: forwards;
-		animation-timing-function: cubic-bezier(0.5, 0.39, 0.43, 0.96);
-		width: 100%;
-		overflow: hidden;
-		height: 100%;
-
-		img {
-			min-height: 100vh;
-			position: fixed;
-			z-index: 20;
-		}
-	}
-}
 .slider {
 	height: 100%;
 
@@ -49,7 +21,10 @@
 		top: 50%;
 		transform: translate3D(-50%, -50%, 0);
 		svg {
-			width: 30vw;
+			height: 50vh;
+			image, clipPath {
+				transition: .3s ease-out;
+			}
 		}
 	}
 	.slider_ui {
