--- a/src/components/Header/logo.scss
+++ b/src/components/Header/logo.scss
@@ -55,7 +55,7 @@
 			min-height: $logoH * .8+px;
 			min-width: $logoW * .8+px;
 		}
-		.test_svg {
+		.logo_svg {
 			z-index: 4;
 			position: absolute;
 			height: 100%;
