--- a/src/components/Content/About/about.scss
+++ b/src/components/Content/About/about.scss
@@ -1,6 +1,7 @@
 .page-about {
 	.column {
 		display: flex;
+		flex-wrap: wrap;
 		@include adaptive(xx) {
 			margin: 200px 0 75px 0;
 		}
@@ -29,6 +30,9 @@
 			div {
 				margin-right: 0;
 			}
+		}
+		div:nth-child(3n) {
+			min-width: 100%;
 		}
 	}
 
