--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -17,8 +17,8 @@
 	.logoSvgMask {
 		position: fixed;
 		z-index: 9;
-		left:0;
-		top:0;
+		left: 0;
+		top: 0;
 		width: 100vw;
 		height: 100vh;
 		display: flex;
@@ -27,11 +27,32 @@
 		// background-color: #272424;
 
 		svg {
-			// -webkit-mask-image: url(/images/logo_blackur.svg);
-			height: 50vh;
-			image,
-			clipPath {
-				transition: .3s ease-out;
+			height: 38.2vh;
+
+			@include adaptive(x1) {
+				#float_stroke {
+					stroke-width: 0.15;
+				}
+				#fix_stroke {
+					stroke-width: 0.075;
+				}
+			}
+			@include adaptive(x05) {
+				width: 50vw;
+				#float_stroke {
+					stroke-width: 0.2;
+				}
+				#fix_stroke {
+					stroke-width: 0.1;
+				}
+			}
+			@include adaptive(x025) {
+				#float_stroke {
+					stroke-width: 0.25;
+				}
+				#fix_stroke {
+					stroke-width: 0.12;
+				}
 			}
 		}
 	}
@@ -88,13 +109,22 @@
 
 			.hidden {
 				overflow: hidden;
-				margin: 15px 0;
-				&:nth-child(2) {
+				margin: 0;
+				&.subheader {
+					@include adaptive(xx) {
+						transform: translateY(20px);
+					}
+					@include adaptive(x2) {
+						transform: translateY(20px);
+					}
+					@include adaptive(x1) {
+						transform: translateY(15px);
+					}
 					@include adaptive(x05) {
-						transform: translateY(-15px);
+						transform: translateY(10px);
 					}
 					@include adaptive(x025) {
-						transform: translateY(-12px);
+						transform: translateY(10px);
 					}
 				}
 			}
@@ -132,12 +162,12 @@
 			li {
 				overflow: hidden;
 				> div {
-					transition: .1s ease;
+					transition: $Transition;
 				}
 			}
 			&.out {
 				li > div {
-					transform: translateY(-70%);
+					transform: translateY(-100%);
 				}
 			}
 
@@ -161,7 +191,7 @@
 			position: absolute;
 			width: 100%;
 			max-width: 100%;
-			z-index: -1;
+			z-index: 1;
 			left: 0px;
 			bottom: 0px;
 			transform: scaleX(0);
@@ -170,25 +200,20 @@
 			overflow: hidden;
 			transition: transform 0.8s cubic-bezier(0.8, 0, 0.2, 1);
 			height: 36px;
-			@include adaptive(xx) {
-				height: 49px;
-				bottom: -27px;
-			}
 			@include adaptive(x2) {
-				height: 49px;
-				bottom: -27px;
+				height: 40px;
+			}
+			@include adaptive(xx) {
+				height: 40px;
 			}
 			@include adaptive(x1) {
-				height: 35px;
-				bottom: -8px;
+				height: 30px;
 			}
 			@include adaptive(x05) {
-				height: 24px;
-				bottom: 7px;
+				height: 20px;
 			}
 			@include adaptive(x025) {
 				height: 18px;
-				bottom: 14px;
 			}
 		}
 		a:hover:before {
@@ -234,11 +259,26 @@
 				transform: translateX(0);
 			}
 		}
+	}
+	.project {
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: 10;
+		opacity: .5;
+		transition: $Transition;
+		transition-duration: 1s;
 
+		&.active {
+			z-index: 11;
+			opacity: 1;
+		}
 		.images {
+			position: absolute;
 			width: 100%;
 			height: 100%;
-			position: absolute;
 			left: 0;
 			top: 0;
 			display: flex;
@@ -273,26 +313,12 @@
 					}
 				}
 			}
+			&#img0 {
+
+
+			}
 			&#img1 {
 				z-index: 2;
-			}
-		}
-		.project {
-			position: fixed;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			z-index: 10;
-			opacity: 0;
-			visibility: hidden;
-			transition: $Transition;
-			transition-duration: 1s;
-
-			&.active {
-				visibility: visible;
-				z-index: 11;
-				opacity: 1;
 			}
 		}
 	}
