--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -267,7 +267,7 @@
 		left: 0;
 		right: 0;
 		z-index: 10;
-		opacity: .5;
+		opacity: 0;
 		transition: $Transition;
 		transition-duration: 1s;
 
@@ -300,25 +300,24 @@
 				width: 100%;
 				height: auto;
 			}
+			&#img0 {
+				perspective: 100vw;
+			}
 			&#img1 {
 				z-index: 1;
+				perspective: 200vw;
 				.imgCover {
 					max-height: 80vh;
 					height: 100%;
 					width: 100%;
+					perspective-origin: center bottom;
+					transform-origin: center;
 					@include adaptive(x025) {
 					}
 					@include adaptive(x01) {
 						background-size: auto 120vh;
 					}
 				}
-			}
-			&#img0 {
-
-
-			}
-			&#img1 {
-				z-index: 2;
 			}
 		}
 	}
