--- a/src/components/Header/logo.scss
+++ b/src/components/Header/logo.scss
@@ -61,8 +61,8 @@
 			height: 100%;
 			width: 100%;
 			svg {
-				max-width: 100%;
-				max-height: 100%;
+				width: 100%;
+				height: 100%;
 			}
 		}
 		.to_white {
