--- a/src/components/Content/Contacts/contacts.scss
+++ b/src/components/Content/Contacts/contacts.scss
@@ -53,34 +53,38 @@
 		}
 	}
 
+	h1 {
+		overflow: hidden;
+		span {
+			display: block;
+		}
+	}
 	&.appear_before {
 		opacity: 0;
-		transition: .3s;
-
 		h1 {
-			transform: translate(50px, 0);
-			transition: .3s;
-		}
-		h2 {
-			transform: translate(0, 50px);
-			transition: .3s;
-		}
-		h3 {
-			transform: translate(50px 50px);
-			transition: .3s;
+			span {
+				transform: translateY(-100%);
+			}
 		}
 	}
 	&.appear_after {
+		transition: $Transition;
 		opacity: 1;
-
 		h1 {
-			transform: translate(0);
+			span {
+				transition: $Transition;
+				transform: translateY(0);
+			}
 		}
-		h2 {
-			transform: translate(0);
-		}
-		h3 {
-			transform: translate(0);
+	}
+	&.leave_animation {
+		transition: $Transition;
+		opacity: 0;
+		h1 {
+			span {
+				transition: $Transition;
+				transform: translateY(-100%);
+			}
 		}
 	}
 }
