--- a/src/components/Content/Main/main.scss
+++ b/src/components/Content/Main/main.scss
@@ -2,12 +2,30 @@
 	height: 100%;
 	max-height: 100vh;
 	width: 100%;
-
 	&.appear_before {
 		opacity: 0;
+		h1,
+		h5 {
+			transform: translateY(-150px);
+		}
 	}
 	&.appear_after {
 		opacity: 1;
+		transition: $Transition;
+		h1,
+		h5 {
+			transition: $Transition;
+			transform: translateY(0px);
+		}
+	}
+	&.leave_animation {
+		opacity: 0;
+		transition: $Transition;
+		h1,
+		h5 {
+			transition: $Transition;
+			transform: translateY(-150px);
+		}
 	}
 }
 
